--- a/WoWApiStubGenerator/WoWApiStubGenerator.csproj
+++ b/WoWApiStubGenerator/WoWApiStubGenerator.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.CommandLine" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Libs\Rutils\Rutils\Rutils.csproj" />
+  </ItemGroup>
+
 </Project>
